--- a/index.html
+++ b/index.html
@@ -39,9 +39,53 @@
         const db = getFirestore(app);
         const auth = getAuth(app);
         let userId = null;
-        let proRatings = [];
-        let proAvailability = [];
         let processedScheduleData = [];
+
+        // Hardcoded default pro ratings
+        const proRatingsDefault = JSON.stringify([
+            { "name": "Nouri", "ratings": ["RED", "ORANGE", "GREEN", "Intro/Novice"] },
+            { "name": "John", "ratings": ["Junior Development", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "Wheelchair"] },
+            { "name": "Justyna", "ratings": ["RED", "ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT", "Wheelchair"] },
+            { "name": "Osas", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT", "Seniors", "Fitness"] },
+            { "name": "David", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT", "Seniors", "Fitness"] },
+            { "name": "Karla", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT"] },
+            { "name": "Danny", "ratings": ["ORANGE", "Junior Development", "High Performance", "All FT", "PACES**"] },
+            { "name": "Zack", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT"] },
+            { "name": "Steven", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT"] },
+            { "name": "Gus", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "PACES**"] },
+            { "name": "Alex H. (Assist)", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold"] },
+            { "name": "Omer", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold"] },
+            { "name": "Anders", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Wheelchair", "Seniors"] },
+            { "name": "Peter", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "PACES**", "Wheelchair", "Seniors"] },
+            { "name": "Farhad", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold"] },
+            { "name": "Jinny", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT"] },
+            { "name": "Viola (Assist)", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Rally/Bronze"] },
+            { "name": "Daniel C.", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Rally/Bronze", "Silver/Gold"] },
+            { "name": "Shaquille", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Rally/Bronze", "Silver/Gold"] },
+            { "name": "Will (Assist)", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Rally/Bronze", "Silver/Gold"] },
+            { "name": "Robert", "ratings": ["Junior Development", "High Performance", "Silver/Gold"] },
+            { "name": "Felix", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Rally/Bronze", "Silver/Gold", "All FT"] },
+            { "name": "Petra (Assist)", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance"] },
+            { "name": "Rohan", "ratings": ["Junior Development", "High Performance", "Rally/Bronze", "Silver/Gold"] },
+            { "name": "Orlando", "ratings": ["Junior Development", "High Performance", "Rally/Bronze", "Silver/Gold", "All FT"] }
+        ], null, 2);
+
+        // Hardcoded default pro availability from the CSV
+        const proAvailabilityDefault = JSON.stringify([
+            { "name": "David Parra-Newton", "availability": [{ "time": "4:00P-9:30P" }] },
+            { "name": "Leo Correa", "availability": [{ "time": "11:30A-3:30P" }] },
+            { "name": "Shaquille Hamilton", "availability": [{ "time": "8:30A-3:00P" }] },
+            { "name": "Valery Cardona", "availability": [{ "time": "9:00A-4:00P" }] },
+            { "name": "Mellanie Benitez", "availability": [{ "time": "9:00A-4:00P" }] },
+            { "name": "John Warren", "availability": [{ "time": "OFF NEW" }] },
+            { "name": "Rod Bailey", "availability": [{ "time": "Available" }] },
+            { "name": "Lindsay Baum", "availability": [{ "time": "Not Available" }] },
+            { "name": "Justyna Wereszka", "availability": [{ "time": "Available" }] }
+        ], null, 2);
+
+        // Parse default data immediately
+        let proRatings = JSON.parse(proRatingsDefault);
+        let proAvailability = JSON.parse(proAvailabilityDefault);
 
         // Helper function to find class rating from class name
         function findRatingByClass(className) {
@@ -117,48 +161,6 @@
             { court: 12, name: 'NTC Gold', time: '7:00P-8:30P', rating: 'Silver/Gold', pro: null },
         ];
 
-        // Hardcoded default pro ratings
-        const proRatingsDefault = JSON.stringify([
-            { "name": "Nouri", "ratings": ["RED", "ORANGE", "GREEN", "Intro/Novice"] },
-            { "name": "John", "ratings": ["Junior Development", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "Wheelchair"] },
-            { "name": "Justyna", "ratings": ["RED", "ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT", "Wheelchair"] },
-            { "name": "Osas", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT", "Seniors", "Fitness"] },
-            { "name": "David", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT", "Seniors", "Fitness"] },
-            { "name": "Karla", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT"] },
-            { "name": "Danny", "ratings": ["ORANGE", "Junior Development", "High Performance", "All FT", "PACES**"] },
-            { "name": "Zack", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT"] },
-            { "name": "Steven", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT"] },
-            { "name": "Gus", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "PACES**"] },
-            { "name": "Alex H. (Assist)", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold"] },
-            { "name": "Omer", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold"] },
-            { "name": "Anders", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Wheelchair", "Seniors"] },
-            { "name": "Peter", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "PACES**", "Wheelchair", "Seniors"] },
-            { "name": "Farhad", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold"] },
-            { "name": "Jinny", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Intro/Novice", "Rally/Bronze", "Silver/Gold", "All FT"] },
-            { "name": "Viola (Assist)", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Rally/Bronze"] },
-            { "name": "Daniel C.", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Rally/Bronze", "Silver/Gold"] },
-            { "name": "Shaquille", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Rally/Bronze", "Silver/Gold"] },
-            { "name": "Will (Assist)", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Rally/Bronze", "Silver/Gold"] },
-            { "name": "Robert", "ratings": ["Junior Development", "High Performance", "Silver/Gold"] },
-            { "name": "Felix", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance", "Rally/Bronze", "Silver/Gold", "All FT"] },
-            { "name": "Petra (Assist)", "ratings": ["ORANGE", "GREEN", "Junior Development", "High Performance"] },
-            { "name": "Rohan", "ratings": ["Junior Development", "High Performance", "Rally/Bronze", "Silver/Gold"] },
-            { "name": "Orlando", "ratings": ["Junior Development", "High Performance", "Rally/Bronze", "Silver/Gold", "All FT"] }
-        ], null, 2);
-
-        // Hardcoded default pro availability from the CSV
-        const proAvailabilityDefault = JSON.stringify([
-            { "name": "David Parra-Newton", "availability": [{ "time": "4:00P-9:30P" }] },
-            { "name": "Leo Correa", "availability": [{ "time": "11:30A-3:30P" }] },
-            { "name": "Shaquille Hamilton", "availability": [{ "time": "8:30A-3:00P" }] },
-            { "name": "Valery Cardona", "availability": [{ "time": "9:00A-4:00P" }] },
-            { "name": "Mellanie Benitez", "availability": [{ "time": "9:00A-4:00P" }] },
-            { "name": "John Warren", "availability": [{ "time": "OFF NEW" }] },
-            { "name": "Rod Bailey", "availability": [{ "time": "Available" }] },
-            { "name": "Lindsay Baum", "availability": [{ "time": "Not Available" }] },
-            { "name": "Justyna Wereszka", "availability": [{ "time": "Available" }] }
-        ], null, 2);
-
         // Helper to parse time strings
         function parseTime(timeStr) {
             const [start, end] = timeStr.split('-').map(s => s.trim());
@@ -193,7 +195,9 @@
         // Assign a pro and save to database
         async function assignPro(classInfo, proName) {
             const updatedClass = { ...classInfo, pro: proName };
-            const docRef = doc(db, `artifacts/${appId}/public/data/classAssignments`, `${classInfo.court}-${classInfo.name}-${classInfo.time}`);
+            const docId = `${classInfo.court}-${classInfo.name}-${classInfo.time}`;
+
+            const docRef = doc(db, `artifacts/${appId}/public/data/classAssignments`, docId);
             try {
                 await setDoc(docRef, updatedClass, { merge: true });
                 setMessage(`Successfully assigned ${proName} to class on court ${classInfo.court}.`, false);
