--- a/index.html
+++ b/index.html
@@ -70,17 +70,25 @@
             { "name": "Orlando", "ratings": ["Junior Development", "High Performance", "Rally/Bronze", "Silver/Gold", "All FT"] }
         ], null, 2);
 
-        // Hardcoded default pro availability from the CSV
+        // Hardcoded default pro availability from the CSV. This data is now updated to reflect the schedule better.
         const proAvailabilityDefault = JSON.stringify([
-            { "name": "David Parra-Newton", "availability": [{ "time": "4:00P-9:30P" }] },
-            { "name": "Leo Correa", "availability": [{ "time": "11:30A-3:30P" }] },
-            { "name": "Shaquille Hamilton", "availability": [{ "time": "8:30A-3:00P" }] },
-            { "name": "Valery Cardona", "availability": [{ "time": "9:00A-4:00P" }] },
-            { "name": "Mellanie Benitez", "availability": [{ "time": "9:00A-4:00P" }] },
-            { "name": "John Warren", "availability": [{ "time": "OFF NEW" }] },
-            { "name": "Rod Bailey", "availability": [{ "time": "Available" }] },
-            { "name": "Lindsay Baum", "availability": [{ "time": "Not Available" }] },
-            { "name": "Justyna Wereszka", "availability": [{ "time": "Available" }] }
+            { "name": "John", "availability": [{ "time": "Available" }] },
+            { "name": "Rod", "availability": [{ "time": "Available" }] },
+            { "name": "Justyna", "availability": [{ "time": "Available" }] },
+            { "name": "David", "availability": [{ "time": "4:00P-9:30P" }] },
+            { "name": "Leo", "availability": [{ "time": "11:30A-3:30P" }] },
+            { "name": "Shaquille", "availability": [{ "time": "8:30A-3:00P" }] },
+            { "name": "Valery", "availability": [{ "time": "9:00A-4:00P" }] },
+            { "name": "Mellanie", "availability": [{ "time": "9:00A-4:00P" }] },
+            { "name": "Daniel C.", "availability": [{ "time": "Available" }] },
+            { "name": "Robert", "availability": [{ "time": "Available" }] },
+            { "name": "Felix", "availability": [{ "time": "Available" }] },
+            { "name": "Orlando", "availability": [{ "time": "Available" }] },
+            { "name": "Rohan", "availability": [{ "time": "Available" }] },
+            { "name": "Zack", "availability": [{ "time": "Available" }] },
+            { "name": "Gus", "availability": [{ "time": "Available" }] },
+            { "name": "Steven", "availability": [{ "time": "Available" }] },
+            { "name": "Farhad", "availability": [{ "time": "Available" }] }
         ], null, 2);
 
         // Parse default data immediately
